# nextbus_api_parser

./: CONTRIBUTING.md  LICENSE  README.md  api_handler.py  data_classes.py  main.py  pyproject.toml  xml_handlers.py
src/nextbus_api_parser/: __init__.py  api_handler.py  data_classes.py  nextbus_predictor.py  xml_handlers.py
